--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "thinkful-react-starter",
+  "name": "side_effects",
   "version": "0.0.1",
-  "description": "A React template",
+  "description": "Project",
   "main": "js/index.js",
   "scripts": {
-    "start": "http-server build",
+    "start": "http-server -c-1 build",
     "dev": "run-p watch serve",
     "test": "mocha --recursive --compilers js:babel-core/register",
     "build": "run-s build:*",
@@ -37,7 +37,7 @@
     "watch:assets": "run-s build:assets _watch:assets",
     "_watch:assets": "chokidar assets/**/* -c \"npm run build:assets\""
   },
-  "author": "Joe Turner <joe@oampo.co.uk>",
+  "author": "Anika Tabassum",
   "license": "UNLICENSED",
   "devDependencies": {
     "babel-cli": "^6.11.4",
@@ -61,11 +61,24 @@
     "webpack": "^1.13.1"
   },
   "dependencies": {
+    "JSONStream": "^1.3.0",
+    "axios": "^0.15.3",
+    "body-parser": "^1.16.0",
+    "datalib": "^1.7.3",
+    "express": "^4.14.1",
     "isomorphic-fetch": "^2.2.1",
+    "json-concat": "0.0.1",
+    "material-ui": "^0.16.7",
+    "merge-jsons-webpack-plugin": "^1.0.3",
+    "mongoose": "^4.8.0",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
     "react-redux": "^4.4.5",
+    "react-router": "^3.0.2",
+    "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
+    "redux-logger": "^2.7.4",
+    "redux-pack": "^0.1.4",
     "redux-thunk": "^2.1.0"
   }
 }
